<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.3.1</version> <!-- 4.0.1 não existe ainda -->
		<relativePath/>
	</parent>

	<groupId>br.com.erp</groupId>
	<artifactId>queenfitstyle</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>queenfitstyle</name>
	<description>ERP para gerenciamento de ecommerce de roupas de academia feminina</description>

	<properties>
		<java.version>21</java.version>
		<springdoc.version>2.1.0</springdoc.version>
		<jdbi.version>3.45.1</jdbi.version>
		<minio.version>8.5.7</minio.version>
		<testcontainers.version>1.19.4</testcontainers.version>
		<spotbugs-maven-plugin.version>4.7.4.2</spotbugs-maven-plugin.version>
		<jjwt.version>0.12.3</jjwt.version>
	</properties>

	<modules>
		<module>app</module>
		<module>attribute</module>
		<module>shared</module>
        <module>product</module>
		<module>inventory</module>
		<module>pricing</module>
		<module>storage</module>
		<module>catalog</module>
		<module>order</module>
		<module>auth</module>
    </modules>

	<dependencyManagement>
		<dependencies>
			<!-- Import Spring Boot dependency management -->
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>3.3.1</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<!-- Testcontainers BOM -->
			<dependency>
				<groupId>org.testcontainers</groupId>
				<artifactId>testcontainers-bom</artifactId>
				<version>${testcontainers.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<!-- JDBI -->
			<dependency>
				<groupId>org.jdbi</groupId>
				<artifactId>jdbi3-core</artifactId>
				<version>${jdbi.version}</version>
			</dependency>
			<dependency>
				<groupId>org.jdbi</groupId>
				<artifactId>jdbi3-sqlobject</artifactId>
				<version>${jdbi.version}</version>
			</dependency>
			<dependency>
				<groupId>org.jdbi</groupId>
				<artifactId>jdbi3-jackson2</artifactId>
				<version>${jdbi.version}</version>
			</dependency>

			<!-- MinIO SDK -->
			<dependency>
				<groupId>io.minio</groupId>
				<artifactId>minio</artifactId>
				<version>${minio.version}</version>
			</dependency>

			<!-- jjwt -->
			<dependency>
				<groupId>io.jsonwebtoken</groupId>
				<artifactId>jjwt-api</artifactId>
				<version>${jjwt.version}</version>
			</dependency>
			<dependency>
				<groupId>io.jsonwebtoken</groupId>
				<artifactId>jjwt-impl</artifactId>
				<version>${jjwt.version}</version>
			</dependency>
			<dependency>
				<groupId>io.jsonwebtoken</groupId>
				<artifactId>jjwt-jackson</artifactId>
				<version>${jjwt.version}</version>
			</dependency>

		</dependencies>
	</dependencyManagement>

	<!-- SpotBugs plugin (non-failing by default) -->
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>com.github.spotbugs</groupId>
					<artifactId>spotbugs-maven-plugin</artifactId>
					<version>${spotbugs-maven-plugin.version}</version>
					<configuration>
						<effort>Min</effort>
						<threshold>Low</threshold>
						<failOnError>false</failOnError>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

</project>
